# ydt2721

./: README.md  report.json  report.md  report.xlsx  test_hpa.json  test_result.json
.claude/: settings.json
ydt2721/: .gitignore  CLAUDE.md  ITU_R_IMPLEMENTATION.md  README.md  cli.py  compare_iturpy.py  pyproject.toml  requirements.txt  setup.py
ydt2721/docs/: COMPLETION_REPORT.md  DEVELOPMENT_PLAN.md  PROJECT_STATUS.md
ydt2721/examples/: beijing_attenuation.py  config_example.json  demo.py  single_location_vs_unavailability.py  test_all.py  test_fixed_rain_rate.py
ydt2721/src/ydt2721/: __init__.py  calculator.py
ydt2721/src/ydt2721/core/: __init__.py  carrier.py  clear_sky.py  constants.py  earth_station.py  itu_rain.py  itu_rain_wrapper.py  margin_adjuster.py  param_manager.py  rain_impact.py  rain_selector.py  reverse_calc.py  satellite.py  space_loss.py
ydt2721/src/ydt2721/models/: __init__.py  dataclass.py
ydt2721/src/ydt2721/output/: __init__.py  excel_report.py  font_manager.py  json_export.py  markdown_report.py  pdf_report.py  pdf_report_old.py
ydt2721/tests/: test_integration.py  test_itu_rain_wrapper.py  test_output.py  test_param_manager.py  test_rain_selector.py  test_satellite.py
